@@ -356,3 +356,4 @@ Revision	Log Message
 349		Convert transported armies
 350		Ships from unraised ships
 351		Fix bug with manpower sometimes being FUBAR
+352		Ships from unraised ships only in coastal provinces
